<resources>
    <string name="app_name">Comic List</string>
    <string name="comic_name">Nama Komik</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        <item>Revenge of the Iron-Blooded Sword Hound</item>
        <item>Solo Max-Level Newbie</item>
        <item>Swordmaster’s Youngest Son</item>
        <item>Reincarnation of the Suicidal Battle God</item>
        <item>Academy’s Genius Swordmaster</item>
        <item>Return Of The Shattered Constellation</item>
        <item>The Reincarnated Assassin is a Genius Swordsman</item>
        <item>Pick Me Up, Infinite Gacha</item>
        <item>Solo Leveling</item>
        <item>Nano Machine</item>
    </string-array>
    <string-array name="data_description">
        <item>He was the hound of the Baskerville family: Vikir. Yet his loyalty was rewarded by the blade of a guillotine dirtied by slander. “I will never live the life of a hound slaughtered after the rabbit is caught.” In place of death, an unexpected opportunity awaits him. Vikir’s eyes glowed red as he sharpened his canines in the dark. “Just you wait, Hugo. I will rip out your throat this time.” It’s time for the hound to exact bloody revenge on his owner.</item>
        <item>Jinhyuk, a gaming Nutuber, was the only person who saw the ending of the game [Tower of Trials]. However, when the game’s popularity declined, it became difficult for him to continue making a living as a gaming Nutuber. Since he already saw the ending of the game, he was about to quit playing. But that day, [Tower of Trials] became reality, and Jinhyuk, who knew about every single thing in the game, took over everything faster than anyone possibly could! “I’ll show you what a true pro is like.”</item>
        <item>Jin Runcandel was the youngest son of Runcandel, the land’s most prestigious swordsman family… And the biggest failure in Runcandel history. He, who was kicked out miserably and came to a meaningless end, was given another chance. “How do you want to use this power?” “I want to use it for myself.” Memories of his past life, overwhelming talent, and a contract with God… The preparations to become the greatest are complete.</item>
        <item>A time travel action fantasy of the strongest of mankind. “Even if the disgusting gods gave me this chance, an opportunity is still an opportunity. Since they want to end up dead, I will kill them.” The last survivor of mankind, Zephyr. The fight with the demons ended in defeat and the gods gave him a chance to go back 10 years in time. The demons who took everything away from humans and the gods who treated humans as beings for sight-seeing. This time, I will tear them to pieces.</item>
        <item>Ronan lived a wasteful life filled with regrets. A second chance befalls him at the end of his futile life. He went back to the time when he was a ten-year-old child! For the people who sacrificed themselves for him, he becomes determined to live a new life.</item>
        <item>A mere human who ascended to the position of a god, ‘Twilight of the Gods’. After becoming infamous as an Evil God, he lost everything. His Constellation, his faith, and his status. His divinity got cut off, and his divine power disappeared. “I’d like you to work with me.” That’s when the master of the Underworld, Thanatos, offered his hand… After grabbing Thanatos’s hand, ‘Twilight of the Gods’ decided to live again as the player ‘Lee Changseon’ to get back at the gods who threw him down to the underworld! ‘So, I’ve really come back.’</item>
        <item>I was a chained dog in my past life. I didn’t remember my parents and I lived an emotionless life; like a tool. That life ended with my master horrifically killing me. I thought that was the end of my life. But when I opened my eyes again, I was born as the youngest child of the continent’s most powerful family. For both revenge and those who treasure me in my new life, I wielded the sword instead of the dagger.</item>
        <item>The mobile gacha game ‘Pick Me Up!’ is known for being brutally difficult, and no one has been able to clear a dungeon. Loki, the fifth among all the world’s masters, loses consciousness while trying to clear the dungeon. Upon waking up, Loki finds himself turned into a 1-star level 1 hero, ‘Islat Han’. “It’s him! I’m certain he’s the one who brought me here!” In order to return to Earth, he must lead novice masters and heroes and break through the 100th floor of the dungeon! “You messed with the wrong person.” This is the story of master Loki who is forced to carry everyone to victory and cannot afford a single defeat.</item>
        <item>Ten years ago, mysterious gates connecting the real world to a monster-infested realm opened, granting some people the power to become \'Hunters.\' Sung Jin-Woo, an E-rank Hunter with no remarkable skills, struggles to make a living by tackling low-level dungeons until he stumbles upon a hidden, high-difficulty dungeon. Near death in this dungeon, he gains a unique power - a personal quest log that allows him to level up and become the strongest S-rank Hunter, changing his fate from weakest to mightiest.</item>
        <item>Nanotechnology meets martial arts at the Mashin Academy. Yeo-un\'s mother may not be one of the High Priest\'s six official wives, but his father\'s blood still qualifies him for a chance at the position of Minor Priest. Will a mysterious nanomachine injection from a future descendent help Yeo-un in this fierce competition against his powerful half-siblings?</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2023/04/IronBloodSwordHound05-1.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2021/07/solomaxlevelnewbie.jpg</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2022/04/swordmastersyoungestCover02.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2021/06/battleGodCover03.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2023/07/replicate-prediction-vl2hajjbgudda4cvzc7qwxj3iy.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2021/11/00-cover.jpg</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2023/08/0covrrrs.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2022/12/infiniteGachaCover03.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2021/03/soloLevelingCover02.png</item>
        <item>https://img.asuracomics.com/unsafe/180x234/https://asuracomics.com/wp-content/uploads/2023/02/nanoMashineCover02.png</item>
    </string-array>
    <string-array name="data_author">
        <item>I Stepped On Lego</item>
        <item>Maslow</item>
        <item>AZI,COBY /Emperor Penguin</item>
        <item>Blue Deep</item>
        <item>Seok Wandi, Sichi</item>
        <item>Sadoyeon</item>
        <item>VOKE/GeulGaemi</item>
        <item>Hermode/Cho Wooneh (RedIce Studio)</item>
        <item>추공 (Chugong) </item>
        <item>Hanjoong Wolya/Hyun Jeolmu</item>
    </string-array>
    <string-array name="data_artist">
        <item>Redice Studio and Seol Ahrang</item>
        <item>Swingbat</item>
        <item>Lee Je-Won</item>
        <item>Blue Deep</item>
        <item>Sichi</item>
        <item>Fleximind, YANG Kyung-Il</item>
        <item>TESS/ Daon Studio</item>
        <item>Redice Studio/(3B2S)</item>
        <item>GEE So-Lyung, Redice Studio</item>
        <item>Redice Studio/Indestructible</item>
    </string-array>
    <string-array name="data_genres">
        <item>Action, Adventure, Fantasy, Martial Arts, Returner, Revenge, Supernatural</item>
        <item>Action, Adventure, Fantasy, Comedy, Game, Tower</item>
        <item>Action, Fantasy, Overpowered, Returner, Shounen</item>
        <item>Action, Fantasy, Overpowered, Returner, Shounen</item>
        <item>Action, Adventure, Fantasy, Returner, Overpowered</item>
        <item>Action, Adventure, Fantasy, Returner</item>
        <item>Action, Adventure, Fantasy, Martial Arts, Reincarnation</item>
        <item>Action, Adventure, Fantasy, Comedy, System</item>
        <item>Action, Adventure, Fantasy, Shounen</item>
        <item>Action, Adventure, Fantasy, Martial Arts, Murim, System</item>
    </string-array>
    <string name="headline_genres">Genres</string>
    <string name="headline_artist">Artist</string>
    <string name="headline_author">Author</string>
    <string name="item_genres">Item Genres</string>
    <string name="item_artist">Item Artist</string>
    <string name="item_author">Item Author</string>
    <string name="comic_review">Comic\'s Review</string>
    <string name="comic_rating">Comic\'s Rating</string>
</resources>